@@ -1,5 +1,8 @@
 2006-03-22  Jb Evain  <jbevain@gmail.com>
 
+	* Mono.Cecil.Cil/CodeWriter.cs:
+		Precisely detect whether we emit fat seh or not.
+
 	* Mono.Cecil/ReflectionWriter.cs:
 		Avoid duplicates in the typespec table.
 
